Don't crash when we have "charset" but not the "=" in the buffer. b=353958 r+sr=bienvenu